# vizgen_data_transfer

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  README.md  pyproject.toml
src/vizgen_data_transfer/: __main__.py  vizgen_data_transfer.py
src/vizgen_data_transfer/etc/: .profile.ps1  .vizgen_config.json  .vizgen_config.toml
