[project]
name = "vizgen_data_transfer"
version = "0.1.0"
description = "Vizgen Data Transfer"
authors = [
    {name = "Gemy George Kaithakottil", email = "Gemy.Kaithakottil@earlham.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = {text = "GNU General Public License v3.0"}
keywords = [
    "vizgen",
    "data transfer",
    "data management",
    "bioinformatics",
]
dependencies = [
]

[tool.poetry]
packages = [{include = "vizgen_data_transfer", from = "src"}]
package-mode = true

[tool.poetry.scripts]
vizgen_data_transfer = "vizgen_data_transfer.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
