[project]
name = "vizgen_data_transfer"
version = "0.1.0"
description = "Vizgen Data Transfer"
authors = [
    {name = "Gemy George Kaithakottil", email = "Gemy.Kaithakottil@earlham.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = {text = "GNU General Public License v3.0"}
keywords = [
    "vizgen",
    "data transfer",
    "data management",
    "bioinformatics",
]
dependencies = [
    "requests>=2,<3",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
vizgen_data_transfer = "vizgen_data_transfer.__main__:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.7"]
build-backend = "uv_build"
